[gd_scene load_steps=2 format=2]

[ext_resource path="res://Plotter/Plotter.gd" type="Script" id=1]

[node name="Plotter" type="Control"]
margin_right = 278.0
margin_bottom = 313.0
rect_min_size = Vector2( 200, 200 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XMaxSpinBox" type="SpinBox" parent="."]
visible = false
margin_left = 184.0
margin_top = 280.0
margin_right = 258.0
margin_bottom = 304.0
step = 0.1
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XMinSpinBox" type="SpinBox" parent="."]
visible = false
margin_left = 16.0
margin_top = 280.0
margin_right = 90.0
margin_bottom = 304.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YMaxSpinBox" type="SpinBox" parent="."]
visible = false
margin_right = 74.0
margin_bottom = 24.0
step = 0.1
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YMinSpinBox" type="SpinBox" parent="."]
visible = false
margin_top = 248.0
margin_right = 74.0
margin_bottom = 272.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowControlsButton" type="Button" parent="."]
margin_left = 232.0
margin_top = 8.0
margin_right = 252.0
margin_bottom = 28.0
toggle_mode = true
text = "*"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="XMaxSpinBox" to="." method="_on_XMaxSpinBox_value_changed"]
[connection signal="value_changed" from="XMinSpinBox" to="." method="_on_XMinSpinBox_value_changed"]
[connection signal="value_changed" from="YMaxSpinBox" to="." method="_on_YMaxSpinBox_value_changed"]
[connection signal="value_changed" from="YMinSpinBox" to="." method="_on_YMinSpinBox_value_changed"]
[connection signal="toggled" from="ShowControlsButton" to="." method="_on_ShowControlsButton_toggled"]
